enhance code quality using static code analysis